--- a/messages/install.txt
+++ b/messages/install.txt
@@ -1,5 +1,5 @@
 ============================================================
-Thank you for installing Bootstrap 4 Snippets
+Thank you for installing Bootstrap 4.3 Autocomplete
 ============================================================
 Visit us: https://proficientdesigners.com
 ------------------------------------------------------------
